--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src"
+    "lint": "eslint src --max-warnings=0",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "10.2.3",
@@ -20,6 +21,11 @@
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "typescript": "^4.2.4"
+  },
+  "lint-staged": {
+    "src/**/*": "yarn lint --fix"
   }
 }
