--- a/package.json
+++ b/package.json
@@ -7,14 +7,26 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "test:watch": "yarn test --watch"
   },
   "dependencies": {
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
+  "lint-staged": {
+    "src/**/*": [
+      "yarn lint --fix",
+      "yarn test --findRelatedTests --bail"
+    ]
+  },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
+    "@types/jest": "^26.0.23",
     "@types/react": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
@@ -24,11 +36,9 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
+    "jest": "^27.0.1",
     "lint-staged": "^11.0.0",
     "prettier": "2.3.0",
     "typescript": "^4.2.4"
-  },
-  "lint-staged": {
-    "src/**/*": "yarn lint --fix"
   }
 }
